--- a/Linux/Centos/Kubernetes/k8s_install/nfs-client/deployment.yaml
+++ b/Linux/Centos/Kubernetes/k8s_install/nfs-client/deployment.yaml
@@ -28,7 +28,7 @@ spec:
               mountPath: /persistentvolumes
           env:
             - name: PROVISIONER_NAME
-              value: fuseim.pri/data
+              value: fuseim.pri/ifs
             - name: NFS_SERVER
               value: 192.168.1.40 
             - name: NFS_PATH
