--- a/Linux/Centos/Kubernetes/k8s_install/nfs-client/class.yaml
+++ b/Linux/Centos/Kubernetes/k8s_install/nfs-client/class.yaml
@@ -1,7 +1,8 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: managed-nfs-storage
-provisioner: fuseim.pri/ifs # or choose another name, must match deployment's env PROVISIONER_NAME'
+  name: nfs-sc
+provisioner: nfs.provisioner
 parameters:
   archiveOnDelete: "true"
+allowVolumeExpansion: true
