--- a/Linux/Centos/Kubernetes/k8s_install/nfs-client/deployment.yaml
+++ b/Linux/Centos/Kubernetes/k8s_install/nfs-client/deployment.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: nfs-client-provisioner
----
 kind: Deployment
 apiVersion: apps/v1 
 metadata:
@@ -22,19 +17,19 @@ spec:
       serviceAccountName: nfs-client-provisioner
       containers:
         - name: nfs-client-provisioner
-          image: quay.io/external_storage/nfs-client-provisioner:latest
+          image: registry.cn-beijing.aliyuncs.com/pylixm/nfs-subdir-external-provisioner:v4.0.0
           volumeMounts:
             - name: nfs-client-root
               mountPath: /persistentvolumes
           env:
             - name: PROVISIONER_NAME
-              value: fuseim.pri/ifs
+              value: nfs.provisioner
             - name: NFS_SERVER
-              value: 192.168.1.40 
+              value: 192.168.18.13
             - name: NFS_PATH
               value: /data/kubernetes
       volumes:
         - name: nfs-client-root
           nfs:
-            server: 192.168.1.40 
+            server: 192.168.18.13
             path: /data/kubernetes
